...
                    .fontWeight(.semibold)
                
                Toggle(isOn: $isCompleted) {
                    TextView(title: "Status: \(isCompleted ? "Completed" : "Pending")")
                }
                
                CustomButtonView(title: "SAVE", action: saveItem)
                
                MultiSpacer(count: 3)
            }
            .alert("Title can not be empty", isPresented: $showAlert, actions: {})
            .navigationTitle("Add an Item 🖊️")
            .padding(30)
        }
    }

    private func saveItem() {
        if title.isEmpty {
...
